0.6
===

Game
----

* Merged render and update loop. Using request animation frame method.
* Trigger event for collision group for both bodies. Ex: collision_bullets_asteroids
* Trigger event for after update function

RenderAssistant
---------------

* Added drawLine method.

InputAssistant
--------------

* When key is pressed it will fire events since keyup. It fixes a weird bug when keydown event is not fired.