@@ -51,6 +51,9 @@ define(function (require) {
         this.scenes = {};
         this.activeScene = 'main';
 
+        this.assetsToLoad = 0;
+        this.assetsLoaded = 0;
+
         this.scenes[this.activeScene] = {
             map: new Map(),
             souls: [],
@@ -222,7 +225,13 @@ define(function (require) {
      * @method start
      */
     Game.prototype.start = function () {
-        requestAnimationFrame(proxy(this, this.loop));
+        var loading = setInterval(proxy(this, function () {
+            if (this.assetsToLoad === this.assetsLoaded) {
+                requestAnimationFrame(proxy(this, this.loop));
+                this.trigger("assets_loaded");
+                clearInterval(loading);
+            }
+        }, 500));
     };
 
     /**
@@ -240,7 +249,10 @@ define(function (require) {
     };
 
     Game.prototype.loadImage = function (id, content, loadedCallback) {
-        resourceAssistant.loadImage(id, content, loadedCallback);
+        this.assetsToLoad += 1;
+        resourceAssistant.loadImage(id, content, proxy(this, function () {
+            this.assetsLoaded += 1;
+        }));
     };
 
     Game.prototype.loadText = function (id, content) {
